--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /node_modules
-/dist
-!/dist/index.html
-!/dist/bundle.js
-!/dist/bundle.js.map
+dist/*
+!dist/index.html
+!dist/bundle.js
+!dist/bundle.js.map
